<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5px"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:layout_marginLeft="49px"
        android:layout_marginRight="49px"
        android:paddingLeft="5px"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/popup_student_name_title_decice"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/popup_student_name_title_user_nick"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/popup_student_name_title_up_or_down"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/popup_student_name_title_camera"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/popup_student_name_title_microphone"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/popup_student_name_title_oauth"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/raise"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/popup_student_name_title_forbidden_speak"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/popup_student_name_title_remove"
            android:textColor="@color/old_popup_student_name_title_color"
            android:textSize="12px" />
    </LinearLayout>

    <ListView
        android:scrollbarThumbVertical="@drawable/old_listview_bar_scroll"
        android:id="@+id/lv_student_name_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="49px"
        android:layout_marginRight="49px"
        android:layout_marginBottom="18px"
        android:layout_marginTop="10px"
        android:divider="@color/nothing"
        android:dividerHeight="10px" />

</LinearLayout>
