<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_classifi"
            android:layout_width="248px"
            android:layout_height="35px"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40px"
            android:background="@drawable/old_shape_popup_title_group"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_class"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="4px"
                android:layout_weight="1"
                android:background="@drawable/old_file_pressed_backgroud"
                android:gravity="center"
                android:text="@string/class_file_group"
                android:textColor="@color/white"
                android:textSize="14px" />

            <TextView
                android:id="@+id/tv_admin"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="4px"
                android:layout_weight="1"
                android:background="@drawable/old_admin_pressed_backgroud"
                android:gravity="center"
                android:text="@string/admin_file_group"
                android:textColor="@color/white"
                android:textSize="14px" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_weight="0.4"
        android:background="@color/nothing" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="50px"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/ll_time_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/popup_title_time"
                    android:textColor="@color/old_popup_course_media_title_color"
                    android:textSize="14px" />


                <ImageView
                    android:id="@+id/iv_time_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:scaleType="center"
                    android:src="@drawable/old_arrange_none" />

            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/ll_type_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/popup_title_type"
                    android:textColor="@color/old_popup_course_media_title_color"
                    android:textSize="14px" />


                <ImageView
                    android:id="@+id/iv_type_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:scaleType="center"
                    android:src="@drawable/old_arrange_none" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/ll_name_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/popup_title_name"
                    android:textColor="@color/old_popup_course_media_title_color"
                    android:textSize="14px" />


                <ImageView
                    android:id="@+id/iv_name_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:scaleType="center"
                    android:src="@drawable/old_arrange_none" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
