<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="180px"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/up_arr"
        android:layout_width="20px"
        android:layout_height="20px"
        android:src="@drawable/old_up_arr"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/down_arr"
        android:layout_width="20px"
        android:layout_height="20px"
        android:src="@drawable/old_down_arr"
        android:layout_alignParentBottom="true"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/right_arr"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:src="@drawable/old_right_arr" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/up_arr"
        android:layout_above="@id/down_arr"
        android:layout_toLeftOf="@id/right_arr"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/old_shape_student_video_popup_backgroud"
        android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_candraw"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_candraw"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/old_icon_control_tools_02" />

                <TextView
                    android:id="@+id/txt_candraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/candraw"
                    android:textSize="11sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_up_sd"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_up_sd"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/old_icon_control_down" />

                <TextView
                    android:id="@+id/txt_up_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/down_std"
                    android:textSize="11sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_audio"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_audio"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/old_icon_close_audio" />

                <TextView
                    android:id="@+id/txt_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_audio"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_video_control"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/old_icon_control_camera_02" />

                <TextView
                    android:id="@+id/txt_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/video_off"
                    android:textSize="11sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_gift"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_gift"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/old_icon_control_gift" />

                <TextView
                    android:id="@+id/txt_gift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/send_gift"
                    android:textSize="11sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_plit_screen"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/img_plit_screen"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/old_icon_screen_normal" />

                <TextView
                    android:id="@+id/txt_plit_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:text="@string/plitscreen"
                    android:textColor="@color/white" />
            </LinearLayout>

    </LinearLayout>



</RelativeLayout>