<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/old_error_dialog_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_temp1"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/remind"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_close_popup"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:layout_centerVertical="true"
            android:src="@drawable/close" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_exit_dialog_message"
        android:layout_below="@id/rl_temp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="@color/tv_exit_dialog_message"
        android:textSize="14sp"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/bt_cancel_dialog"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/old_selector_login_popup_ok_button"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/bt_ok_dialog"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/OK"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/old_selector_login_popup_ok_button"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
